test: use Collections emptyList